# humor-ai

./: README.md  humor-ai-body-small.txt  humor-ai-body.txt  humor_ai_data_preprocessing.ipynb  humor_ai_model.ipynb  project_part1.ipynb  pyproject.toml
data/: humor-ai-data.csv  humor-ai-data.json  stupidstuff_new.json  test-one.json
data-prep/: data_preprocessing_1.ipynb  data_preprocessing_1_edited.ipynb  prep.py
data/jester-data/: jesterdata.json  jesterdata_final.json
data/stupidstuff-data/: stupidstuff_clean.json
generator/: generator.py
