[tool.poetry]
name = "humor-ai"
version = "0.1.0"
description = ""
authors = ["Bohdan <brodskyy.b@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ipykernel = "^5.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
