[tool.poetry]
name = "humor-ai"
version = "0.1.0"
description = ""
authors = ["Bohdan <brodskyy.b@outlook.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
ipykernel = "^5.5.0"
numpy = "^1.20.1"
pandas = "^1.2.3"
matplotlib = "^3.4.0"
seaborn = "^0.11.1"
scipy = "^1.6.2"
sklearn = "^0.0"
xlrd = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
