[tool.poetry]
name = "humor-ai"
version = "0.1.0"
description = ""
authors = ["Bohdan <brodskyy.b@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ipykernel = "^5.5.0"
numpy = "^1.16.0"
pandas = "^1.2.3"
matplotlib = "^3.4.0"
seaborn = "^0.11.1"
sklearn = "^0.0"
xlrd = "^2.0.1"
beautifulsoup4 = "^4.9.3"
nltk = "^3.6.1"
Keras = "^2.4.3"
tensorflow = "2.4.1"
spacy = "^3.0.5"
normalise = "^0.1.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
